--- a/Source/FloodModeling.cbp
+++ b/Source/FloodModeling.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/FloodModeling" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="../Validate/NONGSON" />
+				<Option working_dir="../Validate/SESAN4/model" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gfortran" />
@@ -53,6 +53,9 @@
 			<Option weight="1" />
 		</Unit>
 		<Unit filename="READ.f">
+			<Option weight="1" />
+		</Unit>
+		<Unit filename="SCS_LOSS.f">
 			<Option weight="1" />
 		</Unit>
 		<Unit filename="SCS_UHG.f">
