--- a/Source/FloodModeling.cbp
+++ b/Source/FloodModeling.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/FloodModeling" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="../Validate/SESAN4/model" />
+				<Option working_dir="../Validate/SESAN3A-SESAN4/Model" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gfortran" />
