--- a/Source/FloodModeling.cbp
+++ b/Source/FloodModeling.cbp
@@ -17,7 +17,12 @@
 					<Add option="-fcheck=all" />
 					<Add option="-g" />
 					<Add option="-fbounds-check -ffixed-line-length-120" />
+					<Add directory="D:/study/git/FloodModeling.git/branches/V1.1.0/Source/lib" />
 				</Compiler>
+				<Linker>
+					<Add library="lib/libDateTime.a" />
+					<Add directory="D:/study/git/FloodModeling.git/branches/V1.1.0/Source/lib" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/FloodModeling" prefix_auto="1" extension_auto="1" />
@@ -36,14 +41,24 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="BASING_CONNECTION.f" />
-		<Unit filename="CONSTANTS.f" />
-		<Unit filename="MODULE_PARAM.f" />
-		<Unit filename="MODULE_UHG.f">
+		<Unit filename="BASING_CONNECTION.f">
 			<Option weight="0" />
 		</Unit>
-		<Unit filename="READ.f" />
-		<Unit filename="TOOL.f" />
+		<Unit filename="CONSTANTS.f">
+			<Option weight="0" />
+		</Unit>
+		<Unit filename="MODULE_PARAM.f">
+			<Option weight="0" />
+		</Unit>
+		<Unit filename="MODULE_UHG.f">
+			<Option weight="1" />
+		</Unit>
+		<Unit filename="READ.f">
+			<Option weight="1" />
+		</Unit>
+		<Unit filename="TOOL.f">
+			<Option weight="1" />
+		</Unit>
 		<Unit filename="main.f">
 			<Option weight="1" />
 		</Unit>
