--- a/Source/Hydrologic_Model.cbp
+++ b/Source/Hydrologic_Model.cbp
@@ -2,32 +2,32 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="FloodModeling" />
+		<Option title="Hydrologic_Model" />
 		<Option pch_mode="2" />
 		<Option compiler="gfortran" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/FloodModeling" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="../Validate/SESAN4_3A/thang_1" />
+				<Option output="bin/Debug/Hydrologic_Model" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../Validate/SESAN4_3A/khongmua_6-12" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gfortran" />
 				<Compiler>
+					<Add option="-ffixed-line-length-none" />
 					<Add option="-fcheck=bounds" />
-					<Add option="-fcheck=all" />
 					<Add option="-g" />
-					<Add option="-ffixed-line-length-120 -fbounds-check" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/FloodModeling" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="../Validate/SESAN4_3A/thang_1" />
+				<Option output="bin/Release/Hydrologic_Model" prefix_auto="1" extension_auto="1" />
+				<Option working_dir="../Validate/SESAN4_3A/khongmua_6-12" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gfortran" />
 				<Compiler>
 					<Add option="-O2" />
-					<Add option="-ffixed-line-length-120" />
+					<Add option="-ffixed-line-length-none" />
+					<Add option="-fcheck=bounds" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -43,7 +43,7 @@
 		<Unit filename="BASE_FLOW_METHOD.f">
 			<Option weight="5" />
 		</Unit>
-		<Unit filename="BASING_CONNECTION.f">
+		<Unit filename="BASIN_CONNECTION.f">
 			<Option weight="5" />
 		</Unit>
 		<Unit filename="CHECK.f">
@@ -116,6 +116,7 @@
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
