--- a/Source/Hydrologic_Model.cbp
+++ b/Source/Hydrologic_Model.cbp
@@ -8,11 +8,12 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/Hydrologic_Model" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="../Validate/SESAN4_3A/khongmua_12" />
+				<Option working_dir="E:/project/HuynhCongHoai/validation/comua_12" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gfortran" />
 				<Compiler>
+					<Add option="-cpp" />
 					<Add option="-ffixed-line-length-none" />
 					<Add option="-fcheck=bounds" />
 					<Add option="-g" />
@@ -26,6 +27,7 @@
 				<Option compiler="gfortran" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-cpp" />
 					<Add option="-ffixed-line-length-none" />
 					<Add option="-fcheck=bounds" />
 				</Compiler>
@@ -38,64 +40,64 @@
 			<Add option="-Wall" />
 		</Compiler>
 		<Unit filename="ALLOCATING.f">
-			<Option weight="5" />
-		</Unit>
-		<Unit filename="BASE_FLOW_METHOD.f">
-			<Option weight="5" />
+			<Option weight="9" />
 		</Unit>
 		<Unit filename="BASIN_CONNECTION.f">
-			<Option weight="5" />
+			<Option weight="9" />
+		</Unit>
+		<Unit filename="CALCULATE_REALTIME_MODE.f">
+			<Option weight="0" />
+		</Unit>
+		<Unit filename="CALCULATE_VALIDATION_MODE.f">
+			<Option weight="9" />
 		</Unit>
 		<Unit filename="CHECK.f">
 			<Option weight="1" />
 		</Unit>
 		<Unit filename="INITIALING.f">
-			<Option weight="5" />
+			<Option weight="9" />
 		</Unit>
-		<Unit filename="LOSS_METHOD.f">
-			<Option weight="5" />
+		<Unit filename="MOD_BASIN.f">
+			<Option weight="7" />
 		</Unit>
-		<Unit filename="MOD_BASIN.f" />
 		<Unit filename="MOD_CONSTANTS.f">
 			<Option weight="0" />
 		</Unit>
-		<Unit filename="MOD_GATE.f" />
-		<Unit filename="MOD_PARAM.f">
-			<Option weight="4" />
+		<Unit filename="MOD_GATE.f">
+			<Option weight="5" />
 		</Unit>
-		<Unit filename="MOD_REACH.f" />
-		<Unit filename="MOD_RESERVOIR.f" />
-		<Unit filename="MOD_SOURCE.f" />
-		<Unit filename="MOD_SUBBASIN.f" />
+		<Unit filename="MOD_PARAM.f">
+			<Option weight="8" />
+		</Unit>
+		<Unit filename="MOD_REACH.f">
+			<Option weight="6" />
+		</Unit>
+		<Unit filename="MOD_RESERVOIR.f">
+			<Option weight="6" />
+		</Unit>
+		<Unit filename="MOD_SOURCE.f">
+			<Option weight="6" />
+		</Unit>
+		<Unit filename="MOD_SUBBASIN.f">
+			<Option weight="6" />
+		</Unit>
 		<Unit filename="MOD_TIME.f">
 			<Option weight="4" />
 		</Unit>
 		<Unit filename="MOD_UHG.f">
-			<Option weight="5" />
-		</Unit>
-		<Unit filename="REACH_ROUTING.f">
-			<Option weight="5" />
+			<Option weight="0" />
 		</Unit>
 		<Unit filename="READ.f">
-			<Option weight="5" />
-		</Unit>
-		<Unit filename="RESERVOIR_ROUTING.f">
-			<Option weight="5" />
-		</Unit>
-		<Unit filename="ROUTING.f">
-			<Option weight="5" />
-		</Unit>
-		<Unit filename="RUN_OFF_CALC.f">
-			<Option weight="5" />
+			<Option weight="9" />
 		</Unit>
 		<Unit filename="TOOL.f">
 			<Option weight="0" />
 		</Unit>
-		<Unit filename="TRANSFORM_METHOD.f">
-			<Option weight="5" />
+		<Unit filename="UPDATE_GATE_DATA.f">
+			<Option weight="9" />
 		</Unit>
 		<Unit filename="WRITEFILE.f">
-			<Option weight="5" />
+			<Option weight="9" />
 		</Unit>
 		<Unit filename="lib/datetime.f90">
 			<Option weight="3" />
@@ -116,7 +118,7 @@
 			<Option weight="0" />
 		</Unit>
 		<Unit filename="main.f">
-			<Option weight="5" />
+			<Option weight="9" />
 		</Unit>
 		<Extensions>
 			<code_completion />
